P.674 working on ajax order

--- a/courses/templates/courses/manage/module/formset.html
+++ b/courses/templates/courses/manage/module/formset.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block content %}
-  <h1>Edit "{{ course.title }}</h1>
+  <h1>Edit "{{ course.title }}"</h1>
   <div class="module">
     <h2>Course modules</h2>
     <form action="" method="post">
