--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -15,6 +15,17 @@
         Instructor: {{ course.owner.get_full_name }}
       </p>
       {{ object.overview|linebreaks }}
+      {% if request.user.is_authenticated %}
+        <form action="{% url 'student_enroll_course' %}" method="post">
+          {% csrf_token %}
+          {{ enroll_form }}
+          <input type="submit" value="Enroll now" class="button">
+        </form>
+      {% else %}
+        <a href="{% url 'student_registration' %}" class="button">
+          Register to enroll
+        </a>
+      {% endif %}
     </div>
   {% endwith %}
 {% endblock content %}
